# videoreader

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  __init__.py  pyproject.toml
.github/workflows/: ci.yml
cmake/: Findffmpeg.cmake  Findgalaxy.cmake  Findidatum.cmake  Findpylon.cmake
include/videoreader/: videoreader.h  videoreader.hpp  videowriter.h  videowriter.hpp
python/: requirements.txt
python/videoreader/: __init__.py  __main__.py  minimg.py  numpy.py  videoreader_build.py
src/: ffmpeg_common.cpp  ffmpeg_common.hpp  spinlock.hpp  thismsgpack.cpp  thismsgpack.hpp  videoreader.cpp  videoreader_c.cpp  videoreader_ffmpeg.cpp  videoreader_ffmpeg.hpp  videoreader_galaxy.cpp  videoreader_galaxy.hpp  videoreader_go.cpp  videoreader_idatum.cpp  videoreader_idatum.hpp  videoreader_pylon.cpp  videoreader_pylon.hpp  videowriter.cpp
test/: CMakeLists.txt  test_videoreader.cpp
